<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SampleActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animation_time"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="AnimTimeClick"
                        android:padding="5dp"
                        android:tag="-100"
                        android:text="@string/down" />

                    <TextView
                        android:id="@+id/animTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:onClick="AnimTimeClick"
                        android:padding="5dp"
                        android:tag="100"
                        android:text="@string/up" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/remainSteadyCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/remain_steady" />

                <CheckBox
                    android:id="@+id/bringFrontCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bring_front" />
            </LinearLayout>

            <com.yayandroid.progressedview.ProgressedView
                android:id="@+id/progressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/properties"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="@string/button_text" />
            </com.yayandroid.progressedview.ProgressedView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progressed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/menu_info"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>